Load edit version questions from survey list. survey servlet

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -1,4 +1,5 @@
 editSurvey=jsp/bodyPages/bEditSurvey.jsp
 login=jsp/bodyPages/bLogin.jsp
 userPanelHome=jsp/bodyPages/bUserPanelHome.jsp
+surveyPage=jsp/bodyPages/bSurveyPage.jsp
 surveys=jsp/bodyPages/bSurveys.jsp
