--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -2,4 +2,5 @@ editSurvey=jsp/bodyPages/bEditSurvey.jsp
 login=jsp/bodyPages/bLogin.jsp
 userPanelHome=jsp/bodyPages/bUserPanelHome.jsp
 surveyPage=jsp/bodyPages/bSurveyPage.jsp
+surveyFinishPage=jsp/bodyPages/bSurveyFinishPage.jsp
 surveys=jsp/bodyPages/bSurveys.jsp
