Test version width email result

--- a/SurveyTool/.classpath
+++ b/SurveyTool/.classpath
@@ -11,5 +11,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/ExternalLibs/mail.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
