--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -1,5 +1,6 @@
 editSurvey=jsp/bodyPages/bEditSurvey.jsp
 login=jsp/bodyPages/bLogin.jsp
+pollQuestion=jsp/bodyPages/bPollQuestion.jsp
 userPanelHome=jsp/bodyPages/bUserPanelHome.jsp
 surveyPage=jsp/bodyPages/bSurveyPage.jsp
 surveyFinishPage=jsp/bodyPages/bSurveyFinishPage.jsp
