add result page poll with graphical

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -1,6 +1,7 @@
 editSurvey=jsp/bodyPages/bEditSurvey.jsp
 login=jsp/bodyPages/bLogin.jsp
 pollQuestion=jsp/bodyPages/bPollQuestion.jsp
+pollResult=jsp/bodyPages/bPollResult.jsp
 userPanelHome=jsp/bodyPages/bUserPanelHome.jsp
 surveyPage=jsp/bodyPages/bSurveyPage.jsp
 surveyFinishPage=jsp/bodyPages/bSurveyFinishPage.jsp
