--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -1,5 +1,6 @@
 editSurvey=jsp/bodyPages/bEditSurvey.jsp
 login=jsp/bodyPages/bLogin.jsp
+pollExampleCode=jsp/bodyPages/bPollExampleCode.jsp
 pollQuestion=jsp/bodyPages/bPollQuestion.jsp
 pollResult=jsp/bodyPages/bPollResult.jsp
 userPanelHome=jsp/bodyPages/bUserPanelHome.jsp
