--- a/SurveyTool/.classpath
+++ b/SurveyTool/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="/ExternalLibs/mail.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SurveyManager"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SurveyEngine"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/UserPanel"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
