--- a/SurveyTool/.classpath
+++ b/SurveyTool/.classpath
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/DatabaseMgr"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/DatabaseMgr"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/ExternalLibs/mail.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/SurveyManager"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/SurveyEngine"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/UserPanel"/>
+	<classpathentry exported="true" kind="lib" path="/ExternalLibs/mail.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/SurveyManager"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/SurveyEngine"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/UserPanel"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
