--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -7,3 +7,4 @@ userPanelHome=jsp/surveyManager/bodyPages/bUserPanelHome.jsp
 surveyPage=jsp/surveyEngine/bodyPages/bSurveyPage.jsp
 surveyFinishPage=jsp/surveyEngine/bodyPages/bSurveyFinishPage.jsp
 surveys=jsp/surveyManager/bodyPages/bSurveys.jsp
+profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
