import file and videos in question solved

--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -2,3 +2,4 @@ editSurvey=js/editsurvey.js
 editPoll=js/editpoll.js
 chart=js/Chart.js
 showSurvey=js/showSurvey.js
+controlesAccesiblesYoutubeIframes=js/controlesAccesiblesYoutubeIframes.js
