Reproductor videos youtube accesible integrado

--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -3,3 +3,4 @@ editPoll=js/editpoll.js
 chart=js/Chart.js
 showSurvey=js/showSurvey.js
 controlesAccesiblesYoutubeIframes=js/controlesAccesiblesYoutubeIframes.js
+youtubeIframe=https://www.youtube.com/iframe_api
