json acabado y carga del select de preguntas en dependencias

--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -1,4 +1,5 @@
 editSurvey=js/editsurvey.js
+editSurveyDependences=js/editsurvey-dependences.js
 editPoll=js/editpoll.js
 chart=js/Chart.js
 showSurvey=js/showSurvey.js
