--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -1,4 +1,5 @@
 editSurvey=jsp/surveyManager/bodyPages/bEditSurvey.jsp
+editFees=jsp/surveyManager/bodyPages/bEditFees.jsp
 login=jsp/common/bodyPages/bLogin.jsp
 pollExampleCode=jsp/surveyManager/bodyPages/bPollExampleCode.jsp
 pollQuestion=jsp/surveyEngine/bodyPages/bPollQuestion.jsp
