--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -8,3 +8,4 @@ surveyPage=jsp/surveyEngine/bodyPages/bSurveyPage.jsp
 surveyFinishPage=jsp/surveyEngine/bodyPages/bSurveyFinishPage.jsp
 surveys=jsp/surveyManager/bodyPages/bSurveys.jsp
 profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
+surveyStatistics=jsp/surveyManager/bodyPages/bEditSurveyStatistics.jsp
