--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -5,3 +5,9 @@ chart=js/Chart.js
 showSurvey=js/showSurvey.js
 controlesAccesiblesYoutubeIframes=js/controlesAccesiblesYoutubeIframes.js
 youtubeIframe=https://www.youtube.com/iframe_api
+angular=js/angular/angular.min.js
+angularRouter=js/angular-ui-router/release/angular-ui-router.min.js
+ngSurveyController=ng/controllers/surveyController.js
+ngSurveyService=ng/service/surveyService.js
+youtubeIframeApi=https://www.youtube.com/iframe_api
+youtubeAlgunar=ng/controllers/angular-youtube-embed.js
