--- a/DatabaseMgr/.classpath
+++ b/DatabaseMgr/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
+	<classpathentry kind="lib" path="/ExternalLibs/jettison-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
