--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -6,6 +6,7 @@ pollQuestion=jsp/surveyEngine/bodyPages/bPollQuestion.jsp
 pollResult=jsp/surveyEngine/bodyPages/bPollResult.jsp
 userPanelHome=jsp/surveyManager/bodyPages/bUserPanelHome.jsp
 surveyPage=jsp/surveyEngine/bodyPages/bSurveyPage.jsp
+surveyPageAJS=jsp/surveyEngine/bodyPages/bSurveyPageAJS.jsp
 surveyFinishPage=jsp/surveyEngine/bodyPages/bSurveyFinishPage.jsp
 surveys=jsp/surveyManager/bodyPages/bSurveys.jsp
 profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
