pagination and other things of the survey

--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -6,6 +6,7 @@ showSurvey=js/showSurvey.js
 controlesAccesiblesYoutubeIframes=js/controlesAccesiblesYoutubeIframes.js
 youtubeIframe=https://www.youtube.com/iframe_api
 angular=js/angular/angular.min.js
+angularSanitize=js/angular/angular-sanitize.min.js
 angularRouter=js/angular-ui-router/release/angular-ui-router.min.js
 ngSurveyController=ng/controllers/surveyController.js
 ngSurveyService=ng/service/surveyService.js
