Edit poll finished and pre-select tab survey-poll

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -11,3 +11,4 @@ surveyFinishPage=jsp/surveyEngine/bodyPages/bSurveyFinishPage.jsp
 surveys=jsp/surveyManager/bodyPages/bSurveys.jsp
 profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
 surveyStatistics=jsp/surveyManager/bodyPages/bEditSurveyStatistics.jsp
+editPoll=jsp/surveyManager/bodyPages/bEditPoll.jsp
