--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -12,3 +12,4 @@ surveys=jsp/surveyManager/bodyPages/bSurveys.jsp
 profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
 surveyStatistics=jsp/surveyManager/bodyPages/bEditSurveyStatistics.jsp
 editPoll=jsp/surveyManager/bodyPages/bEditPoll.jsp
+pollStatistics=jsp/surveyManager/bodyPages/bEditPollStatistics.jsp
