--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -10,5 +10,6 @@ angularSanitize=js/angular/angular-sanitize.min.js
 angularRouter=js/angular-ui-router/release/angular-ui-router.min.js
 ngSurveyController=ng/controllers/surveyController.js
 ngSurveyService=ng/service/surveyService.js
+ngSurveyPreviewService=ng/service/surveyPreviewService.js
 youtubeIframeApi=https://www.youtube.com/iframe_api
 youtubeAlgunar=ng/controllers/angular-youtube-embed.js
