Show survey only when it is active. If paused or finished display intefaces

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -13,3 +13,5 @@ profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
 surveyStatistics=jsp/surveyManager/bodyPages/bEditSurveyStatistics.jsp
 editPoll=jsp/surveyManager/bodyPages/bEditPoll.jsp
 pollStatistics=jsp/surveyManager/bodyPages/bEditPollStatistics.jsp
+surveyFinished=jsp/surveyEngine/bodyPages/bSurveyFinished.jsp
+surveyPaused=jsp/surveyEngine/bodyPages/bSurveyPaused.jsp
