auto registration without confirmation mail

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -15,3 +15,6 @@ editPoll=jsp/surveyManager/bodyPages/bEditPoll.jsp
 pollStatistics=jsp/surveyManager/bodyPages/bEditPollStatistics.jsp
 surveyFinished=jsp/surveyEngine/bodyPages/bSurveyFinished.jsp
 surveyPaused=jsp/surveyEngine/bodyPages/bSurveyPaused.jsp
+registrationConditions=jsp/userPanel/bodyPages/bConditionsRegistration.jsp
+accountCreation=jsp/userPanel/bodyPages/bAccountCreation.jsp
+confirmRegistration=jsp/userPanel/bodyPages/bConfirmRegistration.jsp
