--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -13,3 +13,4 @@ ngSurveyService=ng/service/surveyService.js
 ngSurveyPreviewService=ng/service/surveyPreviewService.js
 youtubeIframeApi=https://www.youtube.com/iframe_api
 youtubeAlgunar=ng/controllers/angular-youtube-embed.js
+userPanel=js/userPanel.js
