--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -14,3 +14,4 @@ ngSurveyPreviewService=ng/service/surveyPreviewService.js
 youtubeIframeApi=https://www.youtube.com/iframe_api
 youtubeAlgunar=ng/controllers/angular-youtube-embed.js
 userPanel=js/userPanel.js
+toggleButton=js/bootstrap-toggle.min.js
