user panel login and register

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -18,3 +18,5 @@ surveyPaused=jsp/surveyEngine/bodyPages/bSurveyPaused.jsp
 registrationConditions=jsp/userPanel/bodyPages/bConditionsRegistration.jsp
 accountCreation=jsp/userPanel/bodyPages/bAccountCreation.jsp
 confirmRegistration=jsp/userPanel/bodyPages/bConfirmRegistration.jsp
+upHome=jsp/userPanel/bodyPages/bUPHome.jsp
+loginUserPanel=jsp/userPanel/bodyPages/bLogin.jsp
