Jira CEP4A-101: Registro perfil básico finished

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -20,3 +20,4 @@ accountCreation=jsp/userPanel/bodyPages/bAccountCreation.jsp
 confirmRegistration=jsp/userPanel/bodyPages/bConfirmRegistration.jsp
 upHome=jsp/userPanel/bodyPages/bUPHome.jsp
 loginUserPanel=jsp/userPanel/bodyPages/bLogin.jsp
+basicProfile=jsp/userPanel/bodyPages/bUPBasicProfile.jsp
