--- a/SurveyTool/WebContent/properties/cssfiles.properties
+++ b/SurveyTool/WebContent/properties/cssfiles.properties
@@ -1,2 +1,3 @@
 controlesReproYoutubeAcc=css/controlesReproYoutubeAcc.css
 toggleButton=css/bootstrap-toggle.min.css
+datetimepicker=css/bootstrap-datetimepicker.min.css
