--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -15,3 +15,5 @@ youtubeIframeApi=https://www.youtube.com/iframe_api
 youtubeAlgunar=ng/controllers/angular-youtube-embed.js
 userPanel=js/userPanel.js
 toggleButton=js/bootstrap-toggle.min.js
+datetimepicker=js/bootstrap-datetimepicker.min.js
+moment=js/moment.js
