my surveys without survey link

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -21,3 +21,4 @@ confirmRegistration=jsp/userPanel/bodyPages/bConfirmRegistration.jsp
 upHome=jsp/userPanel/bodyPages/bUPHome.jsp
 loginUserPanel=jsp/userPanel/bodyPages/bLogin.jsp
 basicProfile=jsp/userPanel/bodyPages/bUPBasicProfile.jsp
+mySurveys=jsp/userPanel/bodyPages/bUMySurveys.jsp
