--- a/SurveyTool/WebContent/properties/jsfiles.properties
+++ b/SurveyTool/WebContent/properties/jsfiles.properties
@@ -17,3 +17,5 @@ userPanel=js/userPanel.js
 toggleButton=js/bootstrap-toggle.min.js
 datetimepicker=js/bootstrap-datetimepicker.min.js
 moment=js/moment.js
+datatableJquery=https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js
+datatableBootstrap=https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js
