--- a/SurveyTool/.settings/org.eclipse.core.resources.prefs
+++ b/SurveyTool/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//WebContent/jsp/common/bodyPages/bLogin.jsp=UTF-8
+encoding//WebContent/jsp/userPanel/components/cSurveysList.jsp=UTF-8
