Jira CEP4A-120, Quota general control survey. Not status in user panel table

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -8,6 +8,7 @@ userPanelHome=jsp/surveyManager/bodyPages/bUserPanelHome.jsp
 surveyPage=jsp/surveyEngine/bodyPages/bSurveyPage.jsp
 surveyPageAJS=jsp/surveyEngine/bodyPages/bSurveyPageAJS.jsp
 surveyFinishPage=jsp/surveyEngine/bodyPages/bSurveyFinishPage.jsp
+surveyStatePage=jsp/surveyEngine/bodyPages/bSurveyStatePage.jsp
 surveys=jsp/surveyManager/bodyPages/bSurveys.jsp
 profile=jsp/surveyManager/bodyPages/bEditProfile.jsp
 surveyStatistics=jsp/surveyManager/bodyPages/bEditSurveyStatistics.jsp
