--- a/SurveyTool/WebContent/WEB-INF/web.xml
+++ b/SurveyTool/WebContent/WEB-INF/web.xml
@@ -18,4 +18,10 @@
     <servlet-name>Jersey Web Application</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
+  <resource-ref>
+    <description>Pool conexiones MySQL</description>
+    <res-ref-name>jdbc/surveytool</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
