ip filter notice

--- a/SurveyTool/WebContent/properties/bodypages.properties
+++ b/SurveyTool/WebContent/properties/bodypages.properties
@@ -15,3 +15,4 @@ editPoll=jsp/surveyManager/bodyPages/bEditPoll.jsp
 pollStatistics=jsp/surveyManager/bodyPages/bEditPollStatistics.jsp
 surveyFinished=jsp/surveyEngine/bodyPages/bSurveyFinished.jsp
 surveyPaused=jsp/surveyEngine/bodyPages/bSurveyPaused.jsp
+surveyIpFilter=jsp/surveyEngine/bodyPages/bSurveyIpFilter.jsp
